[metadata]
name = imu-flight-monitor
version = 0.1.0
description = Real-time IMU / PFD dashboard for any MAVLink flight controller
long_description = file: README.md
long_description_content_type = text/markdown
license_files = LICENSE
url = https://github.com/You07abd/IMU-Demo
python_requires = >=3.8

[options]
py_modules =
    imu_demo
    pfd
    panels
    safety
    sources
    laptop_imu
install_requires =
    pymavlink>=2.4
    pyserial>=3.5

[options.entry_points]
console_scripts =
    imu-demo = imu_demo:main
